<resources>
    <string name="app_name">RedBaby</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">扫码</string>
    <string name="information">消息</string>
    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="shopping_car">购物车</string>
    <string name="mine">我的</string>
    <string name="compile">编辑</string>
    <string name="all_check">全选</string>
    <string name="total">合计</string>
    <string name="free">面运费</string>
    <string name="settlement">去结算</string>
    <string name="accomplish">完成</string>
    <string name="delete">删除</string>
    <string name="set">set</string>
    <string name="all_indent">全部订单</string>
    <string name="site1">地址：账户管理</string>
    <string name="site2">地址账户管理</string>
    <string name="site3">地址管理</string>
    <string name="account_safety">账户安全</string>
    <string name="wait_pay">待支付</string>
    <string name="wait_receiving">待收货</string>
    <string name="wait_evaluate">待评价</string>
    <string name="exchange_maintain">退换/维修</string>
    <string name="shop_collecting">商品收藏</string>
    <string name="examine_clouddrill">查看云钻</string>
    <string name="footprint">足迹</string>
    <string name="favorable">优惠券</string>
    <string name="binding_set">绑定设置</string>
    <string name="guesslike">猜你喜欢</string>
    <string name="customer_service">客服</string>
    <string name="collect">收藏</string>
    <string name="store">店铺</string>
    <string name="immediately_buy">立即购买</string>
    <string name="join_shopping_car">加入购物车</string>
    <string name="shop">商品</string>
    <string name="particulars">详情</string>
    <string name="evaluate">评价</string>
    <string name="buy_count">购买数量</string>
    <string name="confirm">确定</string>
    <string name="screen">筛选</string>
    <string name="synthesize">综合</string>
    <string name="sales_volume">销量</string>
    <string name="suning_service">苏宁服务</string>
    <string name="sales_promotion">促销</string>
    <string name="anew_select">重选</string>
    <string name="available_shop">有货商品</string>
    <string name="overseas_purchase">海外购</string>
    <string name="distribution_city">配送城市</string>
    <string name="favorable_type">优惠类型</string>
    <string name="price_section">价格区间</string>
    <string name="all_anew_select">全部重选</string>
    <string name="search">搜索</string>
    <string name="opinion_feedback">意见反馈</string>




</resources>
